# London-Open

./: .gitignore  INTEGRATION_SUMMARY.md  MIGRATION.md  README.md  SECURITY.md  SETUP_DUKASCOPY.md  SETUP_NODE.md  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  setup.cfg
data/: 25-11-10-20.xlsx  25-11-17-19.xlsx  CFD-STATS-2511.xlsx  README.md
etc/: momentum_config.json  mongodb_config.json.template  telegram_config.json.template
examples/: README.md  download_and_analyze.sh
src/dax_momentum/: __init__.py  git_utils.py
src/dax_momentum/analysis/: __init__.py  burst_detector.py  ml_patterns.py  pattern_visualizer.py
src/scripts/: import_data_calc_delta_momentum.py
var/output/: anomalies.csv  breakouts.csv  cluster_summary.csv  friday_edge_analysis_2025-12-04.csv  monday_analysis_5m_2025-12-04.csv  monday_entries_5m_2025-12-04.csv  session_average_analysis.json  trend_phases.csv
var/output/patterns/anomalies/: summary_stats.csv
var/output/patterns/swing_highs/: summary_stats.csv
var/output/patterns/swing_lows/: summary_stats.csv
var/output/patterns/trend_transitions/: summary_stats.csv
