[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dax-momentum"
version = "0.1.0"
description = "Momentum burst detection and visualization for DAX tick data"
requires-python = ">=3.10"
dependencies = [
  "pandas>=1.5",
  "numpy>=1.24",
  "matplotlib>=3.6",
]
